Index.html frontend layout bug fixes
- Replaced images for education (highschool/college) since those images were from broken urls, along with some centering and sizing issues
- changed background-attachment: scroll to bottom hero image on footer
- fixed issue of layout breaking when exceeding 1680px for the 'selected highlights' section

--- a/index/assets/css/main.css
+++ b/index/assets/css/main.css
@@ -2787,6 +2787,9 @@
 
 		@media screen and (max-width: 480px) {
 
+			.wrapper.style3 {
+        background-attachment: scroll;
+    }
 			.wrapper {
 				padding: 2em 0 0.1em 0;
 			}
